581.	[func]*		y-aharen
	Added statistics items in b10-auth based on
	http://bind10.isc.org/wiki/StatisticsItems. Qtype counters are
	dropped as it requires further spec design discussion.
	(Trac #2154, Trac #2155,
	             git 61d7c3959eb991b22bc1c0ef8f4ecb96b65d9325)
	(Trac #2157, git e653adac032f871cbd66cd500c37407a56d14589)

bind10-1.0.0-rc released on February 14, 2013

580.	[func]*		muks
	There is no longer a default user account. The old default account
	with username 'root' has been removed. In a fresh installation of
	BIND 10, the administrator has to configure a user account using
	the b10-cmdctl-usermgr program.
	(Trac #2641, git 54e8f4061f92c2f9e5b8564240937515efa6d934)

579.	[bug]		jinmei
	libdatasrc/b10-auth: corrected some corner cases in query handling
	of in-memory data source that led to the following invalid/odd
	responses from b10-auth:
	- duplicate RRs in answer and additional for type ANY query
	- incorrect NSEC for no error, no data (NXRRSET) response that
	  matches a wildcard
	(Trac #2585, git abe78fae4ba3aca5eb01806dd4e05607b1241745)

578.	[bug]		jinmei
	b10-auth now returns closest encloser NSEC3 proof to queries for
	an empty non terminal derived from an Opt-Out NSEC3 RR, as clarified
	in errata 3441 for RFC5155.  Previously it regarded such case as
	broken zone and returned SERVFAIL.
	(Trac #2659, git 24c235cb1b379c6472772d340e21577c3460b742)

577.	[func]		muks
	Added an SQLite3 index on records(rname, rdtype). This decreases
	insert performance by ~28% and adds about ~20% to the file size,
	but increases zone iteration performance. As it introduces a new
	index, a database upgrade would be required.
	(Trac #1756, git 9b3c959af13111af1fa248c5010aa33ee7e307ee)

576.	[bug]		tmark, tomek
	b10-dhcp6: Fixed bug when the server aborts operation when
	receiving renew and there are no IPv6 subnets configured.
	(Trac #2719, git 3132b8b19495470bbfd0f2ba0fe7da443926034b)

575.	[bug]		marcin